--- a/test_otomenews.html
+++ b/test_otomenews.html
@@ -12,5 +12,5 @@
 
 <body>
 
-	<iframe src="https://www.socialmediawall.io/wall/52434/" width=900px height=700px></iframe>
+	<div class="social-media-wall"  data-cfg-wallid=52434></div><script async src="https://static.socialmediawall.io/w/init-wall.js"></script>
 </body>
