--- a/test_otomenews.html
+++ b/test_otomenews.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<!--<link rel="stylesheet" type="text/css" href="test.css">-->
+	<link rel="stylesheet" type="text/css" href="index_style.css">
     <title>Otome News</title>
 
     <!-- This is a comment, by the way -->
