--- a/test_otomenews.html
+++ b/test_otomenews.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<link rel="stylesheet" type="text/css" href="index_style.css">
-    <title>Otome News</title>
-
-    <!-- This is a comment, by the way -->
-
+   	<title>Otome News</title>
 </head>
 
 <body>
-
+	<div id="banner">
+		<img src="OA_Cover.jpg" alt="Otome Amino">
+	</div>
+	<div id="menu">
+		<ul>
+			<a href="#"><li>Filter</a></li>
+			<a href="#"><li>Devs</a></li>
+			<!--<a href="#"><li>Discontinued Devs</a></li>-->
+			<a href="#"><li>FAQ</a></li>
+			<a href="#"><li>Contact</a></li>
+		</ul>
+	</div>
 	<div class="social-media-wall"  data-cfg-wallid=52434></div><script async src="https://static.socialmediawall.io/w/init-wall.js"></script>
 </body>
