Added script to change menu bar color
Affected when scrolling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
    	<title>Otome News</title>
+	$(function () {
+  $(document).scroll(function () {
+    var $nav = $("#menu");
+    $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+  });
+});
 </head>
 
 <body>
