--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
    	<title>Otome News</title>
-	<script>
-		$(function () { 
-			$(document).scroll(function () {
-    				var $nav = $("#menu");
-    				$nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
-  			});
-		});
-	</script>
 </head>
 
 <body>
 	<div id="banner">
-		<img src="OA_Cover.jpg" alt="Otome Amino">
+		<img src="memphis_mini.png" alt="Otome Amino">
 	</div>
 	<div id="menu">
 		<ul>
