--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="banner">
-		<img src="memphis_mini.png" alt="Otome Amino">
+		<img src="memphis-mini.png" alt="Otome Amino">
 	</div>
 	<div id="menu">
 		<ul>
