--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 
 <body>
 	<div id="banner">
-		<img src="memphis-mini.png" alt="Otome Amino">
 	</div>
 	<div id="menu">
 		<ul>
-			<a href="#"><li>Filter</a></li>
-			<a href="#"><li>Devs</a></li>
-			<!--<a href="#"><li>Discontinued Devs</a></li>-->
-			<a href="#"><li>FAQ</a></li>
-			<a href="#"><li>Contact</a></li>
+			<li><a href="#">Filter</a></li>
+			<li><a href="#">Devs</a></li>
+			<!<li>--<a href="#">Discontinued Devs</a></li>-->
+			<li><a href="#">FAQ</a></li>
+			<li><a href="#">Contact</a></li>
 		</ul>
 	</div>
 	<div class="social-media-wall"  data-cfg-wallid=52434></div><script async src="https://static.socialmediawall.io/w/init-wall.js"></script>
