--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="#">Filter</a></li>
 			<li><a href="#">Devs</a></li>
-			<!<li>--<a href="#">Discontinued Devs</a></li>-->
+			<!--<li>--<a href="#">Discontinued Devs</a></li>-->
 			<li><a href="#">FAQ</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
